<resources>
    <string name="app_name">HardwareManagement</string>
    <string name="title_activity_liste_client">Client List</string>
    <string name="title_activity_fiche_materiel">Hardware sheet</string>
    <string name="title_activity_ajout_client">Client Add</string>
    <string name="title_activity_ajout_contact">Contact add</string>
    <string name="title_activity_ajout_materiel">Hardware Add</string>
    <string name="title_activity_ajout_interface">Interface Add</string>
    <string name="modifier">Edit</string>

    <string name="tab_text_1">Information</string>
    <string name="tab_text_2">Contacts</string>
    <string name="tab_text_3">Hardwares</string>
    <string name="btn_ajout_client">Add</string>
    <string name="nomClient">Name</string>
    <string name="adresseClient">Adress</string>
    <string name="adresse2Client">SubAdress</string>
    <string name="codepostaleClient">Postal Code</string>
    <string name="villeClient">City</string>
    <string name="nomContact">Name</string>
    <string name="prenomContact">First Name</string>
    <string name="fonctionContact">Position Held</string>
    <string name="mailContact">eMail</string>
    <string name="telContact">Phone</string>
    <string name="btn_ajouter">Add</string>
    <string name="libell">Wording</string>
    <string name="num_ro_de_la_s_rie">Serial Number</string>
    <string name="menulistclientupdate">Client Refresh</string>
    <string name="menulistclientajouter">Client Create</string>
    <string name="menulistclientscanner">Scan</string>
    <string name="menufichematerielajouter">Add interface</string>
    <string name="menufichematerielmodifier">Edit hardware</string>


    <string name="nomMateriel">Name</string>
    <string name="typeMateriel">Type</string>
    <string name="libelleMateriel">Wording</string>

    <string name="type_interface">Interface type :</string>
    <string name="nom_interface">Interface name :</string>
    <string name="mac">Mac :</string>
    <string name="ipv4">Ipv4 :</string>
    <string name="ipv6">Ipv6 :</string>
    <string name="masque">Mask :</string>
    <string name="affectation">Affectation :</string>
    <string name="type">Type</string>
    <string name="n_serie">Serial Number</string>
</resources>
