<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints=".AUTOFILL_HINT_NAME"
        android:hint="@string/nomClient" />

    <EditText
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS"
        android:hint="@string/adresseClient" />

    <EditText
        android:id="@+id/adresse2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:autofillHints=".AUTOFILL_HINT_POSTAL_ADDRESS"
        android:hint="@string/adresse2Client" />

    <EditText
        android:id="@+id/codepost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints=".AUTOFILL_HINT_POSTAL_CODE"
        android:hint="@string/codepostaleClient" />

    <EditText
        android:id="@+id/ville"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints=".AUTOFILL_HINT_VILLE"
        android:hint="@string/villeClient" />

    <Button
        android:id="@+id/boutonAjouterMateriel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ajouter" />

</LinearLayout>