<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    android:includeFontPadding="false"
    app:cardElevation="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2f1ef"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:text="@string/nom_interface"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nomInterfaceListeInterface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/type_interface"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/typeInterfaceListeInterface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/mac"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/macListeInterface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/ipv4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ipv4ListeInterface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/ipv6"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ipv6ListeInterface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/masque"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/masqueListeInterface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/affectation"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/affectationListeInterface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>